manifests/destinationRule/ms-doctors-dr-adv.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ms-doctors
  namespace: ordendev
spec:
  host: ms-doctors
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 5
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 5
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
  subsets:
    - name: v1
      labels:
        version: v1
      trafficPolicy:
        connectionPool: #Aplica cuando NO se usa un subset o como valor base
          tcp:
            maxConnections: 3
          http:
            http1MaxPendingRequests: 5
            maxRequestsPerConnection: 3
        outlierDetection: #Si un pod responde 2 errores 5xx consecutivos:
          consecutive5xxErrors: 2
          interval: 5s
          baseEjectionTime: 30s #Se expulsa del load balancing por 30s
          maxEjectionPercent: 100 #Istio puede expulsar todos los pods de esta versión

    - name: v2
      labels:
        version: v2
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 4 #REEMPLAZA el valor global, Aplica solo cuando el tráfico va a ese subset
          http:
            http1MaxPendingRequests: 15
            maxRequestsPerConnection: 4
        outlierDetection:
          consecutive5xxErrors: 5
          interval: 5s
          baseEjectionTime: 15s
          maxEjectionPercent: 50
