manifests/destinationRule/ms-doctors-dr-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ms-doctors
  namespace: ordendev
spec:
  host: ms-doctors
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
